<resources>
    <string name="app_name">Klontong</string>
    <string name="title_home">Home</string>
    <string name="title_order">Pesanan</string>
    <string name="title_notifications">Langganan</string>
    <string name="title_profile">Profil</string>
    <string name="under_dev">Under Development</string>
    <string name="text_banyak">Mohon maaf, kami masih melakukan tahap pengembangan. Mohon bersabar untuk menunggu karya menarik dari kami! Cheers :)</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="daftar">Daftar</string>
    <string name="untuk_lupa_password">Masukkan Nomor Ponsel yang telah terdaftar dan kami akan mengirim kode verifikasi untuk reset password</string>
    <string name="reset_password">Reset Password</string>
    <string name="tagline">Pesan kebutuhan jadi mudah</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="masuk">Masuk</string>
    <string name="atau">Atau</string>
    <string name="isi_kebutuhan">Isi kebutuhan dengan mudah</string>
    <string name="isi_air_galon">Isi Air Galon</string>
    <string name="isi_bensin">Isi Bensin</string>
    <string name="pesan_kebutuhan">Pesan kebutuhan dengan mudah</string>
    <string name="pesan_galon">Pesan Galon</string>
    <string name="pesan_gas">Pesan Gas</string>
    <string name="tagline_isi">Isi apapun menjadi mudah!</string>
    <string name="tagline_pesan">Pesan apapun lebih gampang!</string>
    <string name="klontong_kapital">KLONTONG</string>
    <string name="alamat_antar">Lokasi Anda</string>
    <string name="lengkap">Selengkapnya</string>
    <string name="bantuan">Bantuan</string>
    <string name="faq">F.A.Q</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="mulai_langganan">Berlangganan</string>
    <string name="riwayat">Riwayat</string>
    <string name="no_telepon">Nomor Ponsel</string>
    <string name="nama_warung">Nama Warung</string>
    <string name="masuk_dengan_no_telepon">Masuk dengan Nomor Ponsel</string>
    <string name="welcome_to_klontong">Hai, Selamat Datang!</string>
    <string name="gabung_ke_klontong">Gabung ke Klontong</string>
    <string name="coming_soon">We are still under development…</string>
    <string name="daftar_dengan_no_telepon">Daftar dengan Nomor Ponsel</string>
    <string name="kode_verifikasi">Klontong telah mengirim kode verifikasi ke Nomor Ponsel yang telah Anda daftarkan berikut ini:</string>
    <string name="kode_otp">Kode OTP</string>
    <string name="kode_indo">+62</string>
    <string name="verifikasi_sekarang">Verifikasi Sekarang</string>
    <string name="kode_verifikasi_telah_terkirim">Kode Verifikasi telah terkirim!</string>
    <string name="mohon_cek_koneksi_anda">Gagal Terhubung</string>
    <string name="keluar">Keluar</string>
    <string name="mohon_periksa">Mohon periksa atau hidupkan kembali jaringan Anda untuk masuk ke Klontong</string>
    <string name="daftar_berhasil">Daftar Berhasil</string>
    <string name="silahkan_masuk">Silahkan masuk menggunakan Nomor Ponsel dan Password yang terdaftar</string>
    <string name="masuk_sekarang">Masuk Sekarang</string>
    <string name="apakah_anda_yakin">Apakah Anda yakin?</string>
    <string name="jika_keluar_maka_anda_akan_memulai_daftar_kembali_dari_awal">Jika keluar maka Anda akan mengulang dan memulai daftar kembali dari awal</string>
    <string name="batal">Batal</string>
    <string name="ya_yakin">Ya, Yakin</string>
    <string name="kirim_data">Kirim Data</string>
    <string name="buat_password_untuk_keamanan_anda">Buat password untuk Klontong</string>
    <string name="isi_data_profil_anda">Isi Data Profil Anda</string>
    <string name="ulangi_password">Ulangi Password</string>
    <string name="selamat_datang">Selamat Datang,</string>
    <string name="mau_pesan_apa_hari_ini">Mau pesan apa hari ini?</string>
    <string name="ulangi">Ulangi</string>
    <string name="sudah_daftar">Sudah Terdaftar</string>
</resources>
