<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_tambah"
        android:icon="@drawable/ic_outlin_add"
        app:showAsAction="always"
        android:title="@string/mulai_langganan"/>

    <item
        android:id="@+id/nav_more_three"
        android:icon="@drawable/ic_outline_more"
        app:showAsAction="always"
        android:title="@string/lengkap">

        <menu>
            <item
                android:id="@+id/navigation_help_three"
                android:icon="@drawable/ic_outline_help"
                app:showAsAction="ifRoom|withText"
                android:title="@string/bantuan"/>

            <item
                android:id="@+id/navigation_faq_three"
                android:icon="@drawable/ic_outline_faq"
                app:showAsAction="ifRoom|withText"
                android:title="@string/faq"/>

            <item
                android:id="@+id/navigation_setting_three"
                android:icon="@drawable/ic_outline_settings"
                app:showAsAction="ifRoom|withText"
                android:title="@string/pengaturan"/>
        </menu>

    </item>

</menu>
