<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <ImageView
            android:id="@+id/mobileOff"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_outline_mobile"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mohon_cek_koneksi_anda"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mohon_periksa"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/toRetry"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/button_first"
            android:text="@string/ulangi"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/toOut"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/button_main"
            android:text="@string/keluar"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</LinearLayout>
