<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    xmlns:tools="http://schemas.android.com/tools">

    <include layout="@layout/toolbar_main"
        android:id="@+id/top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollViewBoard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_toolbar"
        android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_action_password"
            android:layout_gravity="center"
            android:contentDescription="@string/password" />

        <TextView
            android:id="@+id/scriptReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/untuk_lupa_password"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_phone"
                android:layout_gravity="center"
                android:contentDescription="@string/no_telepon" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email_reset"
                    android:hint="@string/no_telepon"
                    android:gravity="start"
                    android:ems="10"
                    android:inputType="number"
                    android:theme="@style/AppTheme"
                    android:textColor="@android:color/black"
                    android:textColorHighlight="@color/colorAccent"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/transparent"
        android:layout_above="@id/viewreal"/>

    <View
        android:id="@+id/viewreal"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBottom"
        android:layout_above="@id/reset_button"/>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/button_main"
        android:text="@string/reset_password"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"/>

</RelativeLayout>
