<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    xmlns:tools="http://schemas.android.com/tools">

        <include layout="@layout/toolbar_main"
            android:id="@+id/top_toolbar0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrolling3"
        android:background="@color/colorWhite"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorWhite">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/background"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textWelcome"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/selamat_datang"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/colorWhite"/>

                <TextView
                    android:id="@+id/textUser"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="24sp"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:theme="@style/ThemeCustom"/>
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/draw_shadows"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginBottom="10dp"
                android:clickable="false"
                android:focusable="false"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:text="@string/mau_pesan_apa_hari_ini"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>
            </android.support.v7.widget.CardView>
        </RelativeLayout>

        <TextView
            android:id="@+id/pesan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/pesan_kebutuhan"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textAlignment="viewStart"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/tagline_pesan"
            android:textSize="14sp"
            android:textColor="@color/colorBottom"
            android:textAlignment="viewStart"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:padding="20dp"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card_galon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:background="@drawable/draw_shadows"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@drawable/circle_green"
                        android:src="@mipmap/water"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pesan_galon"
                        android:textSize="16sp"
                        android:textColor="@color/colorBottom"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_gas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:background="@drawable/draw_shadows"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@drawable/circle_green"
                        android:src="@mipmap/gas"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pesan_gas"
                        android:textSize="16sp"
                        android:textColor="@color/colorBottom"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_refill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:background="@drawable/draw_shadows"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@drawable/circle_green"
                        android:src="@mipmap/water"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/isi_air_galon"
                        android:textSize="16sp"
                        android:textColor="@color/colorBottom"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>
    </ScrollView>

</LinearLayout>
