<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <include layout="@layout/toolbar_login"
        android:id="@+id/log_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/register_button"
        android:layout_below="@id/log_toolbar"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/scrolling2">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:src="@mipmap/logo_board"
                android:layout_gravity="center"
                android:contentDescription="@string/password" />

            <TextView
                android:id="@+id/textSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_gravity="center"
                fontPath="fonts/berkshire.ttf"
                tools:ignore="MissingPrefix"
                android:text="@string/gabung_ke_klontong"
                android:textSize="24sp"
                android:textColor="@color/colorAccent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_phone"
                android:layout_gravity="center"
                android:contentDescription="@string/no_telepon" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/forPonsel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/telepon_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/no_telepon"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLines="1"
                    android:maxLength="15"
                    android:theme="@style/AppTheme"
                    android:textColor="@android:color/black"
                    android:textColorHighlight="@color/colorAccent"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_warung"
                android:layout_gravity="center"
                android:contentDescription="@string/nama_warung" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/forWarung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/warung_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_warung"
                    android:ems="10"
                    android:inputType="textCapWords"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:theme="@style/AppTheme"
                    android:textColor="@android:color/black"
                    android:textColorHighlight="@color/colorAccent"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

            <TextView
                android:id="@+id/pernyataan"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:textSize="14sp"
                android:textColor="@color/colorBottom"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/transparent"
        android:layout_above="@id/viewreal"/>

    <View
        android:id="@+id/viewreal"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBottom"
        android:layout_above="@id/register_button"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/button_main"
        android:text="@string/daftar"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"/>

</RelativeLayout>
